--- a/html&css-files/landing/landing.html
+++ b/html&css-files/landing/landing.html
@@ -10,16 +10,8 @@
   <title>lol</title>
 </head>
 <body>
-  <div class="container-fluid">
-    <div id="head-img-back">
-      <div class="row">
-        <div class="col-md-8 offset-md-2">
-          <header>
-            <span class="logo">Lorem ipsum dolor sit amet.</span>
-          </header>
-        </div>
-      </div>
-    </div>
+  <div class="page-header">
+    <img src="/images/head-img-back.jpg" alt="Header Image" id="header-image">
   </div>
 
 </body>
