--- a/html&css-files/landing/landing.html
+++ b/html&css-files/landing/landing.html
@@ -11,7 +11,8 @@
 </head>
 <body>
   <div class="page-header">
-    <img src="/images/head-img-back.jpg" alt="Header Image" id="header-image">
+    <h1 class="head-text">Jon's Black Ops 4 Guide</h1>
+    <h6 class="head-subtext">Your Number 1 Reference to the Sweatiest Game On Earth</h6>
   </div>
 
 </body>
