--- a/html&css-files/landing/landing.html
+++ b/html&css-files/landing/landing.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./landing.css">
   <title>lol</title>
@@ -13,6 +15,19 @@
   <div class="page-header">
     <h1 class="head-text">Jon's Black Ops 4 Guide</h1>
     <h6 class="head-subtext">Your Number 1 Reference to the Sweatiest Game On Earth</h6>
+  </div>
+
+  <div class="container-fluid">
+    <h2 class="panel-heading">Weapon Catagories</h2>
+    <p class="panel-subtext">Click on the images to view more</p>
+    <div class="panel-group">
+      <div class="panel-primary assault-rifles">
+        <div class="panel-heading">Assault Rifles</div>
+        <div class="panel-body">
+          <img src="/images/head-img-back.png" id="panel-num-1-img">
+        </div>
+      </div>
+    </div>
   </div>
 
 </body>
