--- a/html&css-files/landing/landing.html
+++ b/html&css-files/landing/landing.html
@@ -4,31 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/html&css-files/bootstrap.css">
   <link rel="stylesheet" href="./landing.css">
-  <title>lol</title>
+  <title>Home</title>
 </head>
 <body>
-  <div class="page-header">
-    <h1 class="head-text">Jon's Black Ops 4 Guide</h1>
-    <h6 class="head-subtext">Your Number 1 Reference to the Sweatiest Game On Earth</h6>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h2 class="logo-text">Jon's Black Ops 4 Guide</h2>
+      <p class="logo-sub">The Best Goddamn Guide on the Internet</p>
+    </div>
   </div>
 
   <div class="container-fluid">
-    <h2 class="panel-heading">Weapon Catagories</h2>
-    <p class="panel-subtext">Click on the images to view more</p>
-    <div class="panel-group">
-      <div class="panel-primary assault-rifles">
-        <div class="panel-heading">Assault Rifles</div>
-        <div class="panel-body">
-          <img src="/images/head-img-back.png" id="panel-num-1-img">
-        </div>
-      </div>
+    <div class="dark-back">
+	    <div class="row">
+		    <div class="rifles-container col-md-6">
+          <a href="\html&css-files\rifles\rifles.html">
+            <div id="rifles-img"></div>
+          </a>
+		    </div>
+        <div class="smgs-container col-md-6">
+          <a href="/smgs/smgs.html">
+            <div id="smgs-img"></div>
+          </a>
+		    </div>
+	    </div>
+	<div class="row">
+    <div class="snipers-container col-md-6">
+      <a href="/snipers/snipers.html">
+        <div id="snipers-img"></div>
+      </a>
     </div>
-  </div>
+    <div class="pistols-container col-md-6">
+      <a href="/pistols/pistols.html">
+        <div id="pistols-img"></div>
+      </a>
+    </div>
+	 </div>
+   <div class="row">
+     <div class="ninebang-container col-md-6">
+       <a href="\html&css-files\9bang\9bang.html">
+         <div id="ninebang-img"></div>
+       </a>
+     </div>
+   </div>
+</div>
+</div>
 
 </body>
 </html>
