--- a/html&css-files/landing/landing.html
+++ b/html&css-files/landing/landing.html
@@ -22,7 +22,7 @@
     <div class="dark-back">
 	    <div class="row">
 		    <div class="rifles-container col-md-6">
-          <a href="\html&css-files\rifles\rifles.html">
+          <a href="./rifles/rifles.html">
             <div id="rifles-img"></div>
           </a>
 		    </div>
