reworked file structure

--- a/html&css-files/landing.html
+++ b/html&css-files/landing.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./bootstrap.css">
+  <link rel="stylesheet" href="/html&css-files/bootstrap.css">
   <link rel="stylesheet" href="./landing.css">
   <title>Home</title>
 </head>
@@ -22,31 +22,31 @@
     <div class="dark-back">
 	    <div class="row">
 		    <div class="rifles-container col-md-6">
-          <a href="./rifles.html">
+          <a href="./rifles/rifles.html">
             <div id="rifles-img"></div>
           </a>
 		    </div>
         <div class="smgs-container col-md-6">
-          <a href="./smgs.html">
+          <a href="/smgs/smgs.html">
             <div id="smgs-img"></div>
           </a>
 		    </div>
 	    </div>
 	<div class="row">
     <div class="snipers-container col-md-6">
-      <a href="./snipers.html">
+      <a href="/snipers/snipers.html">
         <div id="snipers-img"></div>
       </a>
     </div>
     <div class="pistols-container col-md-6">
-      <a href="./pistols.html">
+      <a href="/pistols/pistols.html">
         <div id="pistols-img"></div>
       </a>
     </div>
 	 </div>
    <div class="row">
      <div class="ninebang-container col-md-6">
-       <a href="./9bang.html">
+       <a href="\html&css-files\9bang\9bang.html">
          <div id="ninebang-img"></div>
        </a>
      </div>
